# err-scout

./: .gitignore  LICENSE  README.md  pyproject.toml
err_scout/: __init__.py  alerter.py  cli.py  client.py  dashboard.py  grouper.py  server.py
err_scout/templates/: dashboard.html
