[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "err-scout"
version = "0.1.0"
description = "Lightweight error tracking: collect, group, and triage exceptions without Sentry."
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [{ name = "err-scout contributors" }]
keywords = ["error-tracking", "exceptions", "monitoring", "debugging", "alerting"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Bug Tracking",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "click>=8.0",
    "fastapi>=0.100",
    "uvicorn>=0.20",
    "flask>=3.0",
    "Jinja2>=3.1",
    "requests>=2.28",
    "rich>=13.0",
]

[project.scripts]
err-scout = "err_scout.cli:cli"

[project.urls]
Homepage = "https://github.com/err-scout/err-scout"
Issues = "https://github.com/err-scout/err-scout/issues"
